# csound

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  001_darwin_paths.patch  AUTHORS  American.xmg  BUILD.md  BUILDING_FOR_ANDROID  Before_release  Building_Csound_on_WIndows.odt  CMakeLists.txt  ChangeLog  CompositionBase.py  CsoundEditor.java  Custom.cmake.ex  Doxyfile  Doxyfile-CsoundAC  English.xmg  How_to_Build_Csound_and_CsoundQt_on_Windows.doc  How_to_Build_Csound_on_Windows.doc  How_to_Build_Csound_on_Windows.odt  INSTALL  INSTALLING  Known_Problems  LICENSE.FLTK  Loadable_Opcodes.txt  Makefile-win32  Makefile.am  Makefile.in  Makefile.jpff  README  README.md  README.md.in  SConstruct  SConstruct2  Statics  Submitting_opcodes  (+99 more)
Bela/: BelaCsound.cpp  CMakeLists.txt  CsoundBela.cpp  Custom.cmake.bela  README.md  bela-makefile.patch  build.sh  crosscompile-setup.sh  crosscompile.cmake  main.cpp
Executables/: CMakeLists.txt
Executables/Bela/: BelaCsound.cpp
Executables/atsa/: CMakeLists.txt  atsa.c
Executables/cs/: CMakeLists.txt
Executables/csanalyze/: CMakeLists.txt
Executables/csb64enc/: CMakeLists.txt
Executables/csbeats/: CMakeLists.txt  beats.h  beats.l  test.xs
Executables/csdebugger/: CMakeLists.txt
Executables/csound-bin/: CMakeLists.txt  csound_main.c
Executables/cvanal/: CMakeLists.txt  cvanal.c
Executables/dnoise/: CMakeLists.txt  dnoise_main.c
Executables/envext/: CMakeLists.txt  env_main.c
Executables/extract/: CMakeLists.txt  xmain.c
Executables/extractor/: CMakeLists.txt
Executables/het_export/: CMakeLists.txt
Executables/het_import/: CMakeLists.txt  het_import.c
Executables/hetro/: CMakeLists.txt  hetro.c
Executables/lpanal/: CMakeLists.txt  lpanal.c  lpc_main.c
Executables/lpc_export/: CMakeLists.txt
Executables/lpc_import/: CMakeLists.txt  lpci_main.c
Executables/makecsd/: CMakeLists.txt
Executables/mixer-bin/: CMakeLists.txt  mixer.c  mixer_main.c
Executables/pv_export/: CMakeLists.txt
Executables/pv_import/: CMakeLists.txt
Executables/pvanal/: CMakeLists.txt  pvanal.c  pvc_main.c
Executables/pvlook/: CMakeLists.txt  pvlook.c
Executables/scale/: CMakeLists.txt
Executables/scot/: CMakeLists.txt  scot.c  scot.h
Executables/scsort/: CMakeLists.txt  smain.c
Executables/sdif2ad/: CMakeLists.txt  sdif.h
Executables/sndinfo/: CMakeLists.txt  sndinfo.c
Executables/src_conv/: CMakeLists.txt  new_srconv.c
Executables/srconv/: CMakeLists.txt  srconv.c
Frontends/: CMakeLists.txt
Frontends/beats/: beats.h  beats.l  beats.y  main.c
InOut/: BeAudio.c  CMakeLists.txt  DECaudio.c  DECplay.c  FL_graph.cpp  HPbug.c  HPplay.c  HaikuAudio.cpp  HaikuMidi.cpp  OSCrecv.c  README.md  SConscript  SGIplay.c  aifc.c  aiff.c  alphanumcmp.c  alphanumcmp.h  alsamidi.c  circularbuffer.c  cmidi.c  cwindow_internal.c  fmidi.c  ieee80.c  ipmidi.c  libsnd.c  libsnd_u.c  mididevice.c  midifile.c  midirecv.c  midisend.c  natsort.c  natsort.h  pa_blocking.c  pablio.c  pmidi.c  pmidiall.c  ringbuffer.c  rtBe.c  rtDEC.c  rtHP.c  (+33 more)
Java/: CMakeLists.txt  README.md  cs_glue.cpp  exclusions.i  java_interface.i
Opcodes/: #arrays.c#  .#arrays.c  3Dug.h  CMakeLists.txt  LuaCsound.cpp  Makefile  Makefile.in  OSC.c  OSC_l.c  OpcodeBase.hpp  README.md  SConscript  VST4CS_LINUX.md  Vosim.c  ableton_link_opcodes.cpp  ableton_link_test.csd  afilters.c  ambicode.c  ambicode1.c  ambideco.c  ampmidid.cpp  arrayops.cpp  arrays.c  avarops.c  babo.c  babo.h  bbcut.c  bbcut.h  bformdec2.cpp  bilbar.c  biquad.c  biquad.h  bowed.h  bowedbar.c  bowedbar.h  brass.h  buchla.c  bus.c  butter.c  butter.h  (+259 more)
Plugins/: CMakeLists.txt
Python/: CMakeLists.txt  ctcsound.py
frontends/: CMakeLists.txt  SConscript
include/: CMakeLists.txt  OpcodeBase.hpp  arrays.h  cfgvar.h  circular_buffer.h  csPerfThread.h  csPerfThread.hpp  cs_par_structs.h  cscore.h  csdebug.h  csdl.h  csound.h  csound.hpp  csoundCore.h  csoundCore_common.h  csoundCore_new.h  csound_circular_buffer.h  csound_compiler.h  csound_data_structures.h  csound_files.h  csound_graph_display.h  csound_misc.h  csound_new.h  csound_server.h  csound_standard_types.h  csound_threaded.hpp  csound_threads.h  csound_type_system.h  cwindow.h  find_opcode.h  float-version.h  float-version.h.in  graph_display.h  interlocks.h  modload.h  msg_attr.h  plugin.h  pools.h  prototyp.h  pstream.h  (+11 more)
interfaces/: CMakeLists.txt  CppSound.cpp  CppSound.hpp  CsoundEditor.java  CsoundFile.cpp  CsoundFile.hpp  SConscript  Soundfile.cpp  Soundfile.hpp  csPerfThread.cpp  csPerfThread.hpp  cs_glue.cpp  cs_glue.h  cs_glue.hpp  csound.asd  csound.hpp  csound.lisp  csound5.lisp  ctcsound.py  exclusions.i  filebuilding.cpp  filebuilding.h  filebuilding.lisp  java_interface.i  lisp-swig.sh  lua_interface.i  manifest.mf  pyMsgCb.cpp  pyMsgCb_stub.cpp  python_interface.i  sb-csound.asd  sb-csound.lisp  support.lisp  test.lisp  test.lua  test.py
po/: CMakeLists.txt  LINGUAS  README.txt  american.po  csound.po  es_CO.po  french.po  german.po  italian.po  romanian.po  russian.po  sndfile_str.c  spanish.po  tester  update
tests/: CMakeLists.txt  README.md  integration.py.in  test.py  test1.csd  test10.csd  test11.csd  test12.csd  test13.csd  test14.csd  test16.csd  test17.csd  test18.csd  test19.csd  test2.csd  test22.csd  test23.csd  test24.csd  test25.csd  test26.csd  test29.csd  test3.csd  test30.csd  test31.csd  test32.csd  test33.csd  test34.csd  test35.csd  test38.csd  test39.csd  test4.csd  test41.csd  test43.csd  test5.csd  test6.csd  test7.csd  test8.csd  test9.csd  test_helpers.py.in.in
util/: CMakeLists.txt  atsa.c  atsa_main.c  csanalyze.c  cvanal.c  cvl_main.c  dnoise.c  dnoise_int.c  dnoise_main.c  env_main.c  envext.c  het_export.c  het_import.c  het_main.c  heti_main.c  hetro.c  hetx_main.c  lpanal.c  lpc_export.c  lpc_import.c  lpc_main.c  lpci_main.c  lpcx_main.c  make_src_conv  mixer.c  mixer_main.c  mkdb.c  mkdict.c  mkopcodes_all.c  new_srconv.c  pv_export.c  pv_import.c  pvanal.c  pvc_main.c  pvi_main.c  pvl_main.c  pvlook.c  pvx_main.c  scale.c  scale_main.c  (+11 more)
(+9020 files in other folders)
